--- a/src/app/users/user/user.component.html
+++ b/src/app/users/user/user.component.html
@@ -1,2 +1,3 @@
-<p>User with ID _ID_ loaded.</p>
+<p>User with {{user.id}}.</p>
 <p>User name is _NAME_</p>
+<a [routerLink]="['/users',10]">Load Anna (10)</a>
